--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,29 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@import 'prismjs/themes/prism-tomorrow.css';
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Custom scrollbar for a better look */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #aaa;
+}
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -116,6 +139,9 @@
     @apply border-border outline-ring/50;
   }
   body {
+    padding:0;
+    margin:0;
+    
     @apply bg-background text-foreground;
   }
 }
