--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -145,3 +145,17 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@theme {
+  --animate-bee: bee 5s ease-in-out infinite;
+  @keyframes bee {
+    0% {
+      transform: translateY(0);
+    } 50% {
+      transform: translateY(-10px);
+    } 100% {
+      transform: translateY(0);
+    }
+  }
+}
+
